build fix for paper/gradle and a lot of conversions to adventure component